<resources>
    <string name="appName" translatable="false">Another Bike App</string>
    <string name="titleActivityTacking">Route tracking</string>
    <string name="unitDistanceM" translatable="false">m</string>
    <string name="unitDistanceKm" translatable="false">km</string>
    <string name="unitDistanceMi" translatable="false">mi</string>
    <string name="unitSpeedMs" translatable="false">m/s</string>
    <string name="unitSpeedKmh" translatable="false">km/h</string>
    <string name="unitSpeedMph" translatable="false">mph</string>
    <string name="unitTemperatureKelvin" translatable="false">K</string>
    <string name="unitTemperatureCelsius" translatable="false">°C</string>
    <string name="unitTemperatureFahrenheit" translatable="false">°F</string>
    <string name="speed">Speed</string>
    <string name="avgSpeed">Avg speed</string>
    <string name="maxSpeed">Max speed</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="status">Status</string>
    <string name="startTime">Start time</string>
    <string name="altitude">Altitude</string>
    <string name="maxAltitude">Max altitude</string>
    <string name="minAltitude">Min altitude</string>
    <string name="avgAltitude">Avg altitude</string>
    <string name="pause">Pause</string>
    <string name="trackingInProgress">Tracking in progress…</string>
    <string name="waitingForLocation">Waiting for location…</string>
    <string name="noPermission">Route tracking is not possible without access to the device\'s location.</string>
    <string name="messageEmptyStatistics">Statistics will be displayed here.</string>
    <string name="locationNotAvailable">Location could not be obtained. Try again later.</string>
    <string name="messageFinishTracking">Are you sure you want to finish tracking?</string>
    <string name="finishTracking">Finish tracking</string>
    <string name="startTracking">Start tracking</string>
    <string name="continueTracking">Continue tracking</string>
    <string name="hide">Hide</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="summary">Summary</string>
    <string name="save">Save</string>
    <string name="reject">Reject</string>
    <string name="messageRejectWarning">Are you sure you want to reject?</string>
    <string name="routesHistory">Routes history</string>
    <string name="noDataAvailable">No data available</string>
    <string name="seconds">seconds</string>
    <string name="ago">ago</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="defaultRouteName">Route</string>
    <string name="nameEditTextTitle">Name:</string>
    <string name="enterName">Enter name</string>
    <string name="login">Sign in</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="createNewAccount">Create new account</string>
    <string name="user">User</string>
    <string name="newAccount">New account</string>
    <string name="name">Name</string>
    <string name="noInternetConnection">No internet connection!</string>
    <string name="somethingGoesWrong">Something goes wrong…</string>
    <string name="cannotBeBlank">This field can\'t be blank!</string>
    <string name="accountCreated">Account has been created. Sign in!</string>
    <string name="fillAllFields">Fill all fields!</string>
    <string name="userExists">User with that email already exists!</string>
    <string name="signOut">Sign out</string>
    <string name="settings">Settings</string>
    <string name="dataLostWarning">Tracking is in progress. If you exit app, data is lost. Are you sure you want exit?</string>
    <string name="exit">Exit</string>
    <string name="prefThemesKey" translatable="false">keyThemes</string>
    <string name="prefThemesTitle">Theme</string>
    <string name="prefThemesSummary">Change theme</string>
    <string name="prefTrackingUnitSpeedKey" translatable="false">trackingUnitSpeedKey</string>
    <string name="prefUnitSpeedTitle">Speed unit</string>
    <string name="prefUnitSpeedSummary">Change speed unit</string>
    <string name="prefTrackingUnitDistanceKey" translatable="false">trackingUnitDistanceKey</string>
    <string name="prefUnitDistanceTitle">Distance unit</string>
    <string name="prefUnitDistanceSummary">Change distance unit</string>
    <string name="prefIsMapThemeEnableKey" translatable="false">isMapThemeEnable</string>
    <string name="prefIsMapThemeEnableTitle">Custom map theme</string>
    <string name="prefIsMapThemeEnableSummary">Enable custom map theme</string>
    <string name="prefWeatherUnitWindSpeedKey" translatable="false">weatherUnitWindSpeedKey</string>
    <string name="prefWeatherUnitWindSpeedTitle">Wind speed unit</string>
    <string name="prefWeatherUnitWindSpeedSummary">Change wind speed unit</string>
    <string name="prefWeatherUnitTemperatureKey" translatable="false">weatherUnitTemperatureKey</string>
    <string name="prefWeatherUnitTemperatureTitle">Temperature unit</string>
    <string name="prefWeatherUnitTemperatureSummary">Change air temperature unit</string>
    <string name="themeDark">Dark</string>
    <string name="themeLight">Light</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="messageDeleteRouteWarning">Are you sure you want to delete this route?</string>
    <string name="delete">Delete</string>
    <string name="messageUnsavedState">Data has not been saved. Are you sure you want to exit?</string>
    <string name="lockMap">Lock map</string>
    <string name="notification_description">Displays basic information about current tracking.</string>
    <string name="messageUserNotExists">User with that email address not exists!</string>
    <string name="passwordIsTooWeak">The password must be at least 6 characters long!</string>
    <string name="incorrectEmailFormat">Incorrect email address format!</string>
    <string name="weather">Weather</string>
    <string name="refresh">Refresh</string>
    <string name="nameNotAvailable">Location\'s name is unknown</string>
    <string name="unknownLocation">Unknown location</string>
    <string name="now">Now</string>
    <string name="theme">Theme</string>
    <string name="tracking">Tracking</string>
    <string name="serverSideSoftware">Server-side software</string>
    <string name="weatherApi">Weather API</string>
    <string name="weatherIconsCredit">Weather icons were made by\n@freepik and @pixel-perfect from</string>
    <string name="aboutApp">About app</string>
    <string name="emailIsIncorrect">Email is incorrect!</string>
    <string name="passwordIsIncorrect">Password is incorrect!</string>
    <string name="resetPassword">Reset password</string>
    <string name="reset">Reset</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="passwordResetComplete">An email to change the password has been sent.</string>
    <string name="no_title">No title</string>
</resources>
