<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/prefThemesKey"
        android:title="@string/prefThemesTitle"
        android:summary="@string/prefThemesSummary"
        android:entries="@array/themes"
        android:entryValues="@array/themeKeys" />

    <ListPreference
        android:key="@string/prefUnitSpeedKey"
        android:title="@string/prefUnitSpeedTitle"
        android:summary="@string/prefUnitSpeedSummary"
        android:entries="@array/speedUnits"
        android:entryValues="@array/speedUnitKeys" />

    <ListPreference
        android:key="@string/prefUnitDistanceKey"
        android:title="@string/prefUnitDistanceTitle"
        android:summary="@string/prefUnitDistanceSummary"
        android:entries="@array/distanceUnits"
        android:entryValues="@array/distanceUnitKeys" />

</PreferenceScreen>