<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?android:colorPrimaryDark"
    tools:context=".ui.modules.createaccount.CreateAccountActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/newAccount"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:textSize="@dimen/loginLabelTextSize"
            tools:ignore="SpUsage" />

        <include layout="@layout/email_edit_text"
            android:id="@+id/emailEditInclude"
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/createAccountTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_account_circle_orange_24dp"
            android:drawablePadding="10dp"
            android:background="?android:colorPrimary"
            android:hint="@string/name"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/emailEditInclude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/displayNameEditText" />

        <include layout="@layout/password_edit_text"
            android:layout_width="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/displayNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/passwordEditInclude" />

        <ProgressBar
            android:id="@+id/createAccountProgressBar"
            android:visibility="gone"
            android:indeterminateTint="?android:textColor"
            android:elevation="4dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="@id/createNewAccountButton"
            app:layout_constraintBottom_toBottomOf="@id/createNewAccountButton"
            app:layout_constraintStart_toStartOf="@id/createNewAccountButton"
            app:layout_constraintEnd_toEndOf="@id/createNewAccountButton"/>

        <Button
            android:id="@+id/createNewAccountButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:colorAccent"
            android:text="@string/createNewAccount"
            android:layout_marginTop="30dp"
            android:onClick="onClickCreateNewAccount"
            app:layout_constraintStart_toStartOf="@id/passwordEditInclude"
            app:layout_constraintEnd_toEndOf="@id/passwordEditInclude"
            app:layout_constraintTop_toBottomOf="@id/passwordEditInclude"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:colorAccent"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            android:onClick="onClickSignIn"
            app:layout_constraintStart_toStartOf="@id/passwordEditInclude"
            app:layout_constraintEnd_toEndOf="@id/passwordEditInclude"
            app:layout_constraintTop_toBottomOf="@id/createNewAccountButton"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>